# check

./: config.h.meson  meson.build  meson_options.txt  upstream.wrap
internal/: config.h.meson
lib/: meson.build
meson/: check_stdint.h.in
src/: meson.build
tests/: meson.build
